src/test/deca/context/invalid/self/mauvaisReturn.deca
class A {
    int add(){
        return 2.0;
    }
}